Fixed maparea's inability to reinitialize itself after data update

--- a/ip-address-tracker-master/style.css
+++ b/ip-address-tracker-master/style.css
@@ -224,7 +224,14 @@ input[type="text"]::placeholder {
     font-weight: 500;
     font-size: 2rem;
 }
-
+#ipinput:invalid {
+    outline: 1px solid red; 
+  }
+  
+  
+  #ipinput:valid {
+    border: none;
+  }
 .results {
     display: flex;
     position: absolute;
